# crypto

./: CMakeLists.txt  main.cpp
cmake/: FindCryptopp.cmake
